@@ -52,6 +52,16 @@
 #include "physics/orxPhysics.h"
 
 
+/** Body *read-only* flags
+ */
+#define orxBODY_KU32_FLAG_DYNAMIC             0x10000000  /**< Dynamic body (can be moved by physics simulation) */
+#define orxBODY_KU32_FLAG_HIGH_SPEED          0x20000000  /**< High speed */
+#define orxBODY_KU32_FLAG_FIXED_ROTATION      0x40000000  /**< Body can't be rotated by physics simulation */
+#define orxBODY_KU32_FLAG_CAN_SLIDE           0x80000000  /**< Body is allowed to slide */
+#define orxBODY_KU32_FLAG_CAN_MOVE            0x01000000  /**< Static body is allowed to move by user direct access */
+#define orxBODY_KU32_FLAG_ALLOW_SLEEP         0x02000000  /**< Allow sleep */
+
+
 /** Internal Body structure
  */
 typedef struct __orxBODY_t                    orxBODY;
